--- a/pc1/src/app/practice/practice/practice.component.html
+++ b/pc1/src/app/practice/practice/practice.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div>
+	<p class="text-muted">  Logged in as {{email}}. <a routerLink="/logout/">Log out  </a></p>
+</div>
+<app-practice-summaries></app-practice-summaries>
