--- a/pc1/src/app/app.component.html
+++ b/pc1/src/app/app.component.html
@@ -1,5 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-light bg-light">
-	<h1 class="navbar-brand" href="#">Concepts Reporting</h1>
+<nav class="navbar navbar-light bg-light border-bottom">
+		<div class="row">
+			<img src="assets/img/practice_concepts_logo.png">
+			<h1 class="navbar-brand">Practice Concepts Reporting</h1>
+		</div>
 </nav>
 <router-outlet></router-outlet>
