--- a/pc1/src/styles.css
+++ b/pc1/src/styles.css
@@ -6,10 +6,14 @@ html, body {
 	color: #404040;
 	height: 100%;
 	padding: 0;
-	margin: 0; }
+	margin: 0;
+	}
+	
 body {margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 
 .container {
 	padding: 20px;
 	margin: 20px;
 }
+
