--- a/pc1/src/app/form/form/form.component.html
+++ b/pc1/src/app/form/form/form.component.html
@@ -36,7 +36,7 @@
 			<button 
 				class='btn btn-primary' 
 				type="submit"
-				[disabled]="!f.valid">Submit
+				[disabled]="!f.valid">{{submitText}}
 		 	</button>
 		</div>
 	</form>
