--- a/pc1/src/app/practice/practice/practice.component.html
+++ b/pc1/src/app/practice/practice/practice.component.html
@@ -2,7 +2,7 @@
 	<p class="text-muted">  Logged in as {{email}}. <a routerLink="/logout/">Log out  </a></p>
 </div>
 <div class="container">
-	<h2>{{practice_name}}</h2>
+	<h1 style="text-align:center">{{practiceName}}</h1>
 <app-practice-summaries
 	[practiceSlug]="practiceSlug"
 ></app-practice-summaries>
