Major refactor on backend to hit single entity api endpoint, to receive entity object with underlying practices and one months of daily_summary data based on query parameters

--- a/pc1/src/app/entity/entity/entity.component.html
+++ b/pc1/src/app/entity/entity/entity.component.html
@@ -2,9 +2,16 @@
 	<p class="text-muted">  Logged in as {{email$ | async}}. <a routerLink="/logout/">Log out  </a></p>
 </div>
 <div class="container">
-<h1>Entity Name: {{ entity$.name | async}}</h1>
-<ul *ngFor="let practice of entity$.practices | async">
-	<li>Practie Name: {{practice}}</li>
-</ul>
+<h1>{{entity.name}}</h1>
+	<ul *ngFor="let practice of entity.practices">
+		<mat-card>
+			<mat-card-title>{{practice.name}}</mat-card-title>
+			<mat-card-content>
+				<ul *ngFor="let provider of practice.providers">
+					<li>{{provider.full_name}}</li>
+				</ul>
+			</mat-card-content>
+	</mat-card>
+	</ul>
 
 </div>
