refactored front end to handle backend refactor of nested object (i.e. receive summaries within practice).  Created Chart component.  Final commit before deleting chart component from current practice-summaries component

--- a/pc1/src/app/entity/entity/entity.component.html
+++ b/pc1/src/app/entity/entity/entity.component.html
@@ -1,5 +1,5 @@
 <div>
-	<p class="text-muted">  Logged in as {{email$ | async}}. <a routerLink="/logout/">Log out  </a></p>
+	<p class="text-muted">  Logged in as {{user.email}}. <a routerLink="/logout/">Log out  </a></p>
 </div>
 <div class="container">
 <h1>{{entity.name}}</h1>
