--- a/pc1/src/app/chart/chart/chart.component.html
+++ b/pc1/src/app/chart/chart/chart.component.html
@@ -1,3 +1,1 @@
-<p>
-  chart works!
-</p>
+<div [attr.id]="chartName" style="height: 370px; width: 100%; margin-left: auto; margin-right: auto"></div>
