refactored backend view with django-filter to filter url params for month, year, practice, entity, as opposed to filtering in serializer with serializers.ListSerializer to_representation

--- a/pc1/src/app/entity/entity/entity.component.html
+++ b/pc1/src/app/entity/entity/entity.component.html
@@ -1,17 +1,29 @@
-<div>
-	<p class="text-muted">  Logged in as {{user.email}}. <a routerLink="/logout/">Log out  </a></p>
+<app-user></app-user>
+<div *ngIf="entity">
+		<h1>{{entity.name}}</h1>
+		<ul *ngFor="let practice of entity.practices">
+			<app-practice
+				[practice]="practice"
+			>
+			</app-practice>
+		</ul>
 </div>
-<div class="container">
-<h1>{{entity.name}}</h1>
-	<ul *ngFor="let practice of entity.practices">
-		<mat-card>
-			<mat-card-title>{{practice.name}}</mat-card-title>
-			<mat-card-content>
-				<ul *ngFor="let provider of practice.providers">
-					<li>{{provider.full_name}}</li>
-				</ul>
-			</mat-card-content>
-	</mat-card>
-	</ul>
 
-</div>
+<br>
+<div *ngIf="entity$ | async as entity2; else loading">
+	<h1>{{entity$}}</h1>
+	<h1>{{entity2}}</h1>
+	<h1>{{entity2.name}}</h1>
+		<ul *ngFor="let practice of entity2.practices">
+			<li>
+				<app-practice
+					[practice]="practice | async"
+				>
+				</app-practice>
+			</li>
+		</ul>
+</div>	
+
+<ng-template #loading>
+	Loading Entity...
+</ng-template>
