--- a/pc1/src/app/user/user/user.component.html
+++ b/pc1/src/app/user/user/user.component.html
@@ -1,9 +1,5 @@
-<div *ngIf="user">
+<div *ngIf="user ; else loading">
 	<p class="text-muted">  Logged in as {{user.email}}. <a routerLink="/logout/">Log out  </a></p>
-</div>
-
-<div *ngIf="user$ | async ; else loading">
-	<p class="text-muted">  Logged in as {{user$.email}}. <a routerLink="/logout/">Log out  </a></p>
 </div>
 
 <ng-template #loading>
