DailySummary data for previous month showing correctly in Practice and Provider Tabs

--- a/pc1/src/app/practice/practice-list/practice-list.component.html
+++ b/pc1/src/app/practice/practice-list/practice-list.component.html
@@ -1,5 +1,6 @@
 <ul *ngFor="let practice of practices">
 	<app-practice
 		[practice]="practice"
+		[dailySummaries]="dailySummaries"
 	></app-practice>
 </ul>
