--- a/pc1/src/app/practice/practice/practice.component.html
+++ b/pc1/src/app/practice/practice/practice.component.html
@@ -1,5 +1,6 @@
-<mat-card>
-	<mat-card-title>{{practice.name}}</mat-card-title>
-	<mat-card-content>
-	</mat-card-content>
-</mat-card>
+	<mat-card>
+		<mat-card-title>{{practice.name}}</mat-card-title>
+		<mat-card-content>
+			<app-chart [dailySummaries]="dailySummaries" [chartName]="practice.slug"></app-chart>
+		</mat-card-content>
+	</mat-card>
