--- a/pc1/src/app/provider/provider-list/provider-list.component.html
+++ b/pc1/src/app/provider/provider-list/provider-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  provider-list works!
-</p>
+<ul *ngFor="let provider of providers">
+	<app-provider
+		[provider]="provider"
+		[dailySummaries]="dailySummaries"
+	></app-provider>
+</ul>
