--- a/pc1/src/app/user/user/user.component.html
+++ b/pc1/src/app/user/user/user.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="user ; else loading">
+<div *ngIf="!user.name == '' ; else loading">
 	<p class="text-muted">  Logged in as {{user.email}}. <a routerLink="/logout/">Log out  </a></p>
 </div>
-
-<ng-template #loading>
-	Loading...
-</ng-template>
