for staff daily summary reporting, switch from tabs to expansion panels.  Functionality to select reporting date for all providers, with date validation...no future dates and no weekends.

--- a/pc1/src/app/daily-summary/daily-summary-container/daily-summary-container.component.html
+++ b/pc1/src/app/daily-summary/daily-summary-container/daily-summary-container.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="practice && dailySummaries">
-	<app-daily-summary [dailySummaries]="dailySummaries" [practice]="practice"></app-daily-summary>
+	<app-daily-summary-list [dailySummaries]="dailySummaries" [practice]="practice"></app-daily-summary-list>
 </div>
