--- a/pc1/src/app/daily-summary/daily-summary/daily-summary.component.html
+++ b/pc1/src/app/daily-summary/daily-summary/daily-summary.component.html
@@ -1,19 +1,13 @@
-<h4>{{practice.name}}</h4>
-<mat-tab-group mat-align-tabs="center">
-	<div *ngFor="let provider of practice.providers">
-		<mat-tab>
-			<ng-template mat-tab-label>
-				<h4>{{provider.last_name}}</h4>
+		<mat-expansion-panel >
+			<mat-expansion-panel-header>
+				<mat-panel-title>
+					<h5>{{provider.name}}</h5>
+				</mat-panel-title>
+			</mat-expansion-panel-header>
+			<ng-template matExpansionPanelContent>
+				<app-form></app-form>
 			</ng-template>
-				<mat-card>
-					<mat-card-title>{{provider.name}}</mat-card-title>
-					<mat-card-content>
-						<app-form>
-						</app-form>
-					</mat-card-content>
-				</mat-card>
-		</mat-tab>
-	</div>
-	<mat-tab-group>
+		</mat-expansion-panel>
+
 
 
