--- a/pc1/src/app/daily-summary/daily-summary-list/daily-summary-list.component.html
+++ b/pc1/src/app/daily-summary/daily-summary-list/daily-summary-list.component.html
@@ -1,13 +1,18 @@
+<div class="container">
 <h4>{{practice.name}}</h4>
-<p>Select providers below to input daily summaries. You may submit past dates by selecting a different date from the dropdown</p>
+
 <mat-form-field>
 	<input matInput [matDatepicker]="datePicker" [max]="today" [matDatepickerFilter]="dateFilter" placeholder="Submitting reports for:" [formControl]="date">
 	<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
 	<mat-datepicker #datePicker></mat-datepicker>
 </mat-form-field>
-
+</div>
 <div class="container">
 <div *ngFor="let provider of practice.providers">
-	<app-daily-summary [practice]="practice" [provider]="provider" [dailySummaries]="dailySummaries"></app-daily-summary>
+	<app-daily-summary 
+	[practice]="practice" 
+	[provider]="provider" 
+	[dailySummaries]="dailySummaries">
+</app-daily-summary>
 </div>
 </div>
