--- a/pc1/src/app/daily-summary/daily-summary-list/daily-summary-list.component.html
+++ b/pc1/src/app/daily-summary/daily-summary-list/daily-summary-list.component.html
@@ -2,7 +2,12 @@
 <h4>{{practice.name}}</h4>
 
 <mat-form-field>
-	<input matInput [matDatepicker]="datePicker" [max]="today" [matDatepickerFilter]="dateFilter" placeholder="Submitting reports for:" [formControl]="date">
+	<input matInput 
+		[matDatepicker]="datePicker" 
+		[max]="today" 
+		[matDatepickerFilter]="dateFilter" 
+		placeholder="Submitting reports for:" 
+		[formControl]="date">
 	<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
 	<mat-datepicker #datePicker></mat-datepicker>
 </mat-form-field>
