--- a/pc1/src/app/daily-summary/daily-summary/daily-summary.component.html
+++ b/pc1/src/app/daily-summary/daily-summary/daily-summary.component.html
@@ -8,7 +8,10 @@
 				</mat-panel-title>
 			</mat-expansion-panel-header>
 			<ng-template matExpansionPanelContent>
-				<app-daily-summary-form [specialties]="provider.specialties"></app-daily-summary-form>
+				<app-daily-summary-form 
+				[practice]="practice"
+				[provider]="provider"
+				></app-daily-summary-form>
 			</ng-template>
 		</mat-expansion-panel>
 		<br>
