--- a/pc1/src/app/daily-summary/daily-summary-list/daily-summary-list.component.html
+++ b/pc1/src/app/daily-summary/daily-summary-list/daily-summary-list.component.html
@@ -19,7 +19,8 @@
 	[practice]="practice" 
 	[provider]="provider" 
 	[dailySummaries]="dailySummaries"
-	(addSummaryOutput)="addSummary($event)">
+	(addSummaryOutput)="addSummary($event)"
+	(putSummaryOutput)="putSummary($event)">
 </app-daily-summary>
 </div>
 </div>
