--- a/pc1/src/app/daily-summary/daily-summary/daily-summary.component.html
+++ b/pc1/src/app/daily-summary/daily-summary/daily-summary.component.html
@@ -1,28 +1,30 @@
 	<div>
-		<mat-expansion-panel #expPanel [class.darkenBackground]="dailySummaryExists">
+		<mat-expansion-panel #expPanel>
 			<mat-expansion-panel-header>
 				<mat-panel-title>
 					<div *ngIf="dailySummaryExists">
 						<i class="material-icons" style="padding: 6px">done</i>
 					</div>
-					<div>
-						<h5>{{provider.name}}</h5>
-					</div>
+						<div>
+							{{provider.name}}
+						</div>
+				
 				</mat-panel-title>
 			</mat-expansion-panel-header>
 			<ng-template matExpansionPanelContent>
-				<app-daily-summary-form
-				[dailySummaryExists]="dailySummaryExists"
-				[dailySummary]="dailySummary"
-				[selectedDate]="selectedDate" 
-				[practice]="practice"
-				[provider]="provider"
-				(addSummaryOutput)="addSummary($event)"
-				(putSummaryOutput)="putSummary($event)"
-				[dailySummaryDisabled]="dailySummaryDisabled"
-				(editingOutput)="setEditing($event)"
-				[editing]="editing"
-				></app-daily-summary-form>
+					<div *ngFor="let specialty of provider.specialties">
+							<app-daily-summary-form
+								[dailySummary]="providerDailySummaries[specialty]"
+								[selectedDate]="selectedDate"
+								[specialty]="specialty" 
+								[practice]="practice"
+								[provider]="provider"
+								(addSummaryOutput)="addSummary($event)"
+								(putSummaryOutput)="putSummary($event)"
+							></app-daily-summary-form>
+					<mat-divider></mat-divider>
+					</div>
+
 			</ng-template>
 		</mat-expansion-panel>
 		<br>
