Working practice-detail component with Previous year comparison for field of choice per daily-summary-chart.

--- a/pc1/src/app/practice/practice/practice.component.html
+++ b/pc1/src/app/practice/practice/practice.component.html
@@ -1,6 +1,11 @@
 	<mat-card>
 		<mat-card-title>{{practice.name}}</mat-card-title>
 		<mat-card-content>
-			<app-chart [dailySummaries]="dailySummaries" [chartName]="practice.slug"></app-chart>
+			<app-chart 
+				[dailySummaries]="dailySummaries" 
+				[chartName]="practice.slug">
+			</app-chart>
 		</mat-card-content>
 	</mat-card>
+
+	
