--- a/pc1/src/app/practice/practice-container/practice-container.component.html
+++ b/pc1/src/app/practice/practice-container/practice-container.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div *ngIf="practice && dailySummaries && pyDailySummaries">
+	<app-practice-detail 
+		[practice]="practice" 
+		[dailySummaries]="dailySummaries"
+		[pyDailySummaries]="pyDailySummaries">
+			
+		</app-practice-detail>
+</div>
